# giacomo-maggiore-com

./: .gitignore  02-math-finance.mdx  README.md  llm-wiki.md  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  wip.md
app/: global.css  instrumentation-client.js  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/api/ask/: route.ts
app/api/newsletter/: route.ts
app/api/posthog/: route.ts
app/api/views/: route.ts
app/ask/: page.tsx
app/blog/: page.tsx  utils.ts
app/blog/[slug]/: page.tsx
app/blog/posts/: 01-polimi-recap.en.mdx  01-polimi-recap.mdx  02-math-finance.mdx  02-one-month-eth.en.mdx  02-one-month-eth.it.mdx  02-one-month-eth.mdx  03-about-spending.en.mdx  03-about-spending.it.mdx  (+18 more)
app/books/: bookList.json  page.tsx
app/components/: AskChat.tsx  LangRedirect.tsx  LangSwitcher.tsx  ToTViewsClientOnly.tsx  TotViews.tsx  TotalTime.tsx  Views.tsx  ViewsClientOnly.tsx  footer.tsx  footer_newsletter.tsx  mdx.tsx  nav.tsx  notes.tsx  posts.tsx
app/cv/: page.tsx
app/feed.xml/: route.ts
app/newsletter/: page.tsx
app/notes/: page.tsx  utils.ts
app/privacy/: page.tsx
app/resources/: page.tsx
components/: PostHogProvider.tsx
lib/: wiki-index.generated.json
lib/wiki/: frontmatter.ts  llm.ts  mdx-files.ts  paths.ts  retrieve.ts
scripts/: assert-no-private-pages.ts  build-wiki-index.ts
tools/: requirements.txt
tools/ingest/: __main__.py  cleanup.py  cli.py  link.py  lint.py  mineru_run.py  providers.py  pyproject.toml  refresh_vault.py  vault.py
wiki/private/: _lint-report.md  index.md  log.md  prova_2.md
(+92 files in other folders)
